* configure mongodb for lab on nosql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,23 @@
 version: '3'
 services:
+  esme_mongodb:
+    build:
+      context: ./esme_mongodb
+    ports:
+      - "27017:27017"
+    volumes:
+      - /data/db 
+      - ./esme_mongodb/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+  
+  esme_admin:
+    build:
+      context: ./esme_admin
+    ports:
+      - "3000:3000"
+    environment:
+      - MONGOCLIENT_DEFAULT_CONNECTION_URL=mongodb://esme_mongodb:27017/geography
+    volumes:
+      - /data/db
   esme_console:
     build:
       context: ./esme_console
